--- a/docs/404.md
+++ b/docs/404.md
@@ -5,9 +5,9 @@ description: an error page, the sequel
 tags: error,page,kerbal,ksp,zer0Kerbal,zedK
 ---
 
-<!-- 404.md v1.0.3.2
-MOD-NAME (ABBV)
-created: 01 Feb 2022
+<!-- 404-petunia.md v1.0.3.2
+Space Shuttle RCS Nosecone (SSRN)
+created: 01 Apr 2022
 updated: 15 May 2022 -->
 
 <script src="https://kit.fontawesome.com/0ea5493613.js" crossorigin="anonymous"></script>
@@ -18,10 +18,12 @@ updated: 15 May 2022 -->
 
 ## Launch error : Bill is out to launch (oops lunch)
 
+*but we did find a Petunia and a Whale*
+
 [Home](./index.md)
 
 ---
 
-![Space Ground Tour by discoslelge](https://github.com/zer0Kerbal/JoolianDiscovery/blob/master/img/space-grand-tour-ksp-by-discoslelge-dbvxxbz-fullview.png?raw=true)
+![cartoon whale illustration, digital art, nature, flying, clouds HD wallpaper](https://c4.wallpaperflare.com/wallpaper/24/616/1007/digital-art-illustration-nature-flying-wallpaper-preview.jpg)
 
 <!-- this file CC BY-ND 4.0 by zer0Kerbal -->
