--- a/docs/ReleaseNotes/3.0.0.0.md
+++ b/docs/ReleaseNotes/3.0.0.0.md
@@ -25,6 +25,21 @@ updated: 23 Jul 2022 -->
 
 ## Changes
 
+* Better Texture
+* Fixed thrusters not being symmetrical
+* Fixed not showing up in Career mode (Specialized Control)
+
+* Add
+  * [ghostParts.cfg] v1.3.0.0
+    * ssrn-long --> ssncLong
+    * ssrn-short --> ssncShort
+    * to provide continuity with future versions
+
+### Status 3.0.0.0
+
+* Issues
+  * closes #6 - Previous Release - Archival
+
 ---
 
 ## See More
