--- a/docs/ReleaseNotes/3.0.99.0.md
+++ b/docs/ReleaseNotes/3.0.99.0.md
@@ -124,10 +124,11 @@ updated: 23 Jul 2022 -->
 
 ### Status
 
-1 - Space Shuttle RCS Nosecones (RCSN) (SSNC) 3.0.99.0-adoption `<Cone Anyone?>` edition
-2 - 3.0.99.0 Create Legal Mumbo Jumbo
-3 - 3.0.99.0 Create Documentation
-4 - 3.0.99.0 Create Social Media
+* Issues
+  * closes #1 - Space Shuttle RCS Nosecones (RCSN) (SSNC) 3.0.99.0-adoption `<Cone Anyone?>` edition
+  * closes #2 - 3.0.99.0 Create Legal Mumbo Jumbo
+  * closes #3 - 3.0.99.0 Create Documentation
+  * closes #4 - 3.0.99.0 Create Social Media
 
 ---
 
